tests/NormalTests/paczka2/big_fuzzy/28108218.err
Error in line 2: A4 A4 74,7
Error in line 14: A4 A4 47,8
Error in line 16: CzkxKcnfDK A474 98,5
Error in line 22: A4 A4 28,4
Error in line 20: CzkxKcnfDK S135 60,8
Error in line 21: Ps9KdQuwEn8 S135 433,8
Error in line 27: zOB60evCP A4 37,3
Error in line 25: CZ426h3j A708 18,5
Error in line 28: RXT28nAj5 A474 19,1
Error in line 39: A4 A708 91,4
Error in line 41: A4 A708 96,9
Error in line 43: RXT28nAj5 A474 47,0
Error in line 44: CzkxKcnfDK S135 80,0
Error in line 53: A4 A474 34,8
Error in line 59: xPhx A708 8,2
Error in line 67: xPhx A4 53,40
Error in line 68: A4 A474 57,5
Error in line 66: CZ426h3j S135 42,2
Error in line 74: A4 A474 144,3
Error in line 73: CZ426h3j A474 54,2
Error in line 78: A4 A708 4,1
Error in line 70: xPhx A4 169,6
Error in line 93: A4 A708 13,3
Error in line 97: A4 A708 35,1
Error in line 98: A4 A708 77,6
Error in line 96: zOB60evCP A474 53,5
Error in line 105: A4 A474 45,5
Error in line 106: zOB60evCP S135 83,4
Error in line 109: A4 A474 206,9
Error in line 110: CZ426h3j A4 55,3
Error in line 111: CZ426h3j A708 86,9
Error in line 91: RXT28nAj5 A708 89,2
Error in line 113: CZ426h3j A474 63,1
Error in line 119: zOB60evCP A4 39,9
Error in line 127: Ps9KdQuwEn8 A708 21,6
Error in line 123: RXT28nAj5 S135 28,4
Error in line 139: A4 A708 80,0
Error in line 140: A4 A708 226,4
Error in line 141: A4 S135 50,6
Error in line 147: A4 S135 9,6
Error in line 148: A4 A708 41,4
Error in line 145: Ps9KdQuwEn8 A708 14,6
Error in line 151: A4 S135 89,9
Error in line 146: RXT28nAj5 S135 68,7
Error in line 156: A4 S135 319,1
Error in line 157: zOB60evCP S135 38,8
Error in line 166: A4 S135 71,2
Error in line 164: Ps9KdQuwEn8 S135 99,6
Error in line 176: A4 S135 43,9
Error in line 177: A4 S135 50,0
Error in line 179: A4 A4 54,5
Error in line 181: A4 A4 66,5
Error in line 187: CzkxKcnfDK A708 55,7
Error in line 194: A4 A474 35,5
Error in line 199: A4 A474 156,76
Error in line 203: CzkxKcnfDK S135 -3,2
Error in line 201: Ps9KdQuwEn8 A4 11,8
Error in line 205: xPhx A474 85,77
Error in line 204: Ps9KdQuwEn8 S135 17,7
Error in line 190: CzkxKcnfDK S135 56,8
Error in line 217: A4 A708 91,4
Error in line 221: A4 A708 64,9
Error in line 214: zOB60evCP A708 16,5
Error in line 219: RXT28nAj5 S135 63,6
Error in line 228: A4 A708 280,4
Error in line 220: CzkxKcnfDK A4 1,5
Error in line 243: CZ426h3j A4 41,4
